[package]
name = "ross-logger"
version = "0.1.0"
authors = ["Linas Nikiperavičius <linas@linasdev.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "Logger for the Rusty Old Smart System"
repository = "https://github.com/linasdev/ross-logger"
readme = "README.md"

[dependencies]
cortex-m = "0.7.2"

[dependencies.stm32f1xx-hal-bxcan]
version = "0.8.0"
features = ["rt", "stm32f103", "medium"]
